<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cat.urv.jobanalyzer</groupId>
	<artifactId>SparkJavaJobAnalyzer</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	
	<properties>
    	<maven.compiler.source>1.8</maven.compiler.source>
    	<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>

	<dependencies>

		<!-- JavaSymbolResolver dependencies -->
		<!-- https://mvnrepository.com/artifact/com.github.javaparser/java-symbol-solver-core -->
		<dependency>
		    <groupId>com.github.javaparser</groupId>
		    <artifactId>java-symbol-solver-core</artifactId>
		    <version>0.6.0</version>
		</dependency>


		<!-- https://mvnrepository.com/artifact/com.github.javaparser/java-symbol-solver-model -->
		<dependency>
		    <groupId>com.github.javaparser</groupId>
		    <artifactId>java-symbol-solver-model</artifactId>
		    <version>0.6.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.github.javaparser/java-symbol-solver-logic -->
		<dependency>
		    <groupId>com.github.javaparser</groupId>
		    <artifactId>java-symbol-solver-logic</artifactId>
		    <version>0.6.0</version>
		</dependency>
		
		<dependency>
			<groupId>pl.joegreen</groupId>
			<artifactId>lambda-from-string</artifactId>
			<version>1.6</version>
		</dependency>		
 
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/net.openhft/compiler -->
		<dependency>
		    <groupId>net.openhft</groupId>
		    <artifactId>compiler</artifactId>
		    <version>2.0</version>
		</dependency>		
		
		<!-- https://mvnrepository.com/artifact/io.javaslang/javaslang -->
		<dependency>
		    <groupId>io.javaslang</groupId>
		    <artifactId>javaslang</artifactId>
		    <version>2.0.5</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core_2.10 -->
		<dependency>
		    <groupId>org.apache.spark</groupId>
		    <artifactId>spark-core_2.11</artifactId>
		    <version>2.1.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming_2.10 -->
		<dependency>
		    <groupId>org.apache.spark</groupId>
		    <artifactId>spark-streaming_2.10</artifactId>
		    <version>2.1.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql_2.11 -->
		<dependency>
		    <groupId>org.apache.spark</groupId>
		    <artifactId>spark-sql_2.11</artifactId>
		    <version>2.1.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.spark/spark-mllib_2.10 -->
		<dependency>
		    <groupId>org.apache.spark</groupId>
		    <artifactId>spark-mllib_2.10</artifactId>
		    <version>2.1.1</version>
		</dependency>
		
	
		<!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library 
		<dependency>
		    <groupId>org.scala-lang</groupId>
		    <artifactId>scala-library</artifactId>
		    <version>2.12.2</version>
		</dependency> -->
		
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api 
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>1.7.25</version>
		</dependency>		-->

	</dependencies>

</project>
